--- a/app/src/main/res/layout/notifications_activity_main.xml
+++ b/app/src/main/res/layout/notifications_activity_main.xml
@@ -31,18 +31,11 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".MainActivity">
 
-        <TextView
-            android:id="@+id/notifications_connectionStatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/status_disconnected"/>
-
         <Button
             android:id="@+id/notifications_sendNotification"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
             android:background="@color/colorPrimary"
             android:textColor="@android:color/white"
             android:text="@string/notifications_sendNotification"/>
